Loading challenges, testing with rendering, begining of filter by text and webpack added

--- a/src/sections/challenges.scss
+++ b/src/sections/challenges.scss
@@ -13,6 +13,14 @@
     overflow-x: scroll;
 }
 
+.challenges-list {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    flex-wrap: wrap;
+
+}
+
 .challenge-item {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -62,3 +70,4 @@
     @include responsive-ctas;
     margin: 4rem 3rem;
 }
+
