--- a/src/sections/challenges.scss
+++ b/src/sections/challenges.scss
@@ -17,7 +17,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     min-width: 360px;
-
+    position: relative;
     border-radius: 4px;
     margin: 1em;
     box-shadow: 0 0 1em rgba(0, 0, 0, 0.2);
@@ -33,6 +33,14 @@
 
     .challenge-image {
         grid-column: span 2;
+    }
+
+    .challenge-image-icon {
+        position: absolute;
+        right: 5px;
+        top: 5px;
+        height: 40px;
+        width: 40px;
     }
 
     .challenge-title {
