--- a/static/main.css
+++ b/static/main.css
@@ -322,6 +322,7 @@ header h1 {
   display: grid;
   grid-template-columns: 1fr 1fr;
   min-width: 360px;
+  position: relative;
   border-radius: 4px;
   margin: 1em;
   box-shadow: 0 0 1em rgba(0, 0, 0, 0.2);
@@ -336,6 +337,13 @@ header h1 {
 }
 .challenge-item .challenge-image {
   grid-column: span 2;
+}
+.challenge-item .challenge-image-icon {
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  height: 40px;
+  width: 40px;
 }
 .challenge-item .challenge-title {
   grid-column: span 2;
@@ -484,3 +492,5 @@ footer a:hover {
     grid-column: 10/12;
   }
 }
+
+/*# sourceMappingURL=main.css.map */
