Add styling for modal

--- a/src/main.scss
+++ b/src/main.scss
@@ -17,6 +17,8 @@ img {
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+
+
 @import "misc.scss";
 @import "mixins.scss";
 @import "sections/header.scss";
@@ -27,3 +29,5 @@ img {
 @import "sections/story.scss";
 @import "sections/usps.scss";
 @import "sections/footer.scss";
+
+@import "modal.scss";
