--- a/static/main.css
+++ b/static/main.css
@@ -521,7 +521,7 @@ footer a:hover {
 }
 
 .starsFrom a.active {
-  content: url(/static/StarFilled.svg);
+  content: url(/static/star-active.svg);
   background-repeat: no-repeat;
   width: 10px;
   height: 20px;
@@ -531,7 +531,7 @@ footer a:hover {
 }
 
 .starDeactive {
-  content: url(/static/StarEmpty.svg);
+  content: url(/static/star-inactive.svg);
   background-repeat: no-repeat;
   width: 10px;
   height: 20px;
@@ -563,7 +563,7 @@ footer a:hover {
 }
 
 .starsTo a.active {
-  content: url(StarFilled.svg);
+  content: url(/static/star-active.svg);
   background-repeat: no-repeat;
   width: 10px;
   height: 20px;
