--- a/src/sections/challenges.scss
+++ b/src/sections/challenges.scss
@@ -71,3 +71,13 @@
     margin: 4rem 3rem;
 }
 
+.no-matching-challenges {
+    text-align: center;
+    font-weight: 600;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+}
+
+.hidden {
+    display: none;
+}
