--- a/src/main.scss
+++ b/src/main.scss
@@ -30,4 +30,4 @@ img {
 @import "sections/usps.scss";
 @import "sections/footer.scss";
 @import "modal.scss";
-@import "sections/tags.scss"
+@import "sections/filters.scss";
