--- a/static/main.css
+++ b/static/main.css
@@ -342,12 +342,19 @@ header h1 {
   overflow-x: scroll;
 }
 
-.grid {
-  flex-wrap: wrap;
+@media (min-width: 1000px) {
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 400px);
+    justify-content: center;
+    padding: 1em;
+    gap: 2em;
+  }
+  .grid .challenge-item {
+    margin: 0;
+  }
 }
-
 .challenge-item {
-  flex: 1;
   display: grid;
   grid-template-columns: 1fr 1fr;
   min-width: 360px;
@@ -357,6 +364,7 @@ header h1 {
   box-shadow: 0 0 1em rgba(0, 0, 0, 0.2);
   overflow: hidden;
 }
+
 .challenge-item .challenge-title,
 .challenge-item .challenge-description,
 .challenge-item .rating,
