--- a/static/main.css
+++ b/static/main.css
@@ -40,51 +40,31 @@ li {
   background-color: #8ACFE5;
   color: #011827;
 }
-.starsFrom, .starsTo {
-  display: flex;
-  list-style: none;
-}
+
 .rating {
   display: flex;
   gap: 0.6em;
 }
-.rating-star {
-  content: url(/static/star-inactive.png);
-  width: 20px;
-  height: 20px;
-  margin: 5px;
-
-}
-
 .rating .rating-star {
   list-style-type: none;
   width: 23px;
   height: 26px;
-  content: url(star-inactive.png);
+  background-image: url(star-inactive.png);
   background-size: contain;
   background-repeat: no-repeat;
 }
-.rating-star.active {
-  content: url(star-active.png); 
+.rating .rating-star.active {
+  background-image: url(star-active.png);
 }
-
-@media (min-width: 600px) {
-  .stars {
-    display: flex;
-  }
-}
-
- /*
-.rating-star:hover {
-  opacity: 50%;
-  cursor: pointer;
-}*/
-
 
 header {
   background-color: #011827;
   color: white;
   padding: 1em;
+}
+header a {
+  text-decoration: none;
+  color: white;
 }
 header h1 {
   margin: 0;
@@ -364,7 +344,6 @@ header h1 {
   box-shadow: 0 0 1em rgba(0, 0, 0, 0.2);
   overflow: hidden;
 }
-
 .challenge-item .challenge-title,
 .challenge-item .challenge-description,
 .challenge-item .rating,
@@ -681,7 +660,41 @@ footer a:hover {
   margin: 0 1em;
 }
 
+.starsFrom, .starsTo {
+  display: flex;
+  list-style: none;
+}
 
+.rating {
+  display: flex;
+  gap: 0.6em;
+}
+
+.rating-star {
+  content: url(/static/star-inactive.png);
+  width: 20px;
+  height: 20px;
+  margin: 5px;
+}
+
+.rating .rating-star {
+  list-style-type: none;
+  width: 23px;
+  height: 26px;
+  content: url(star-inactive.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.rating-star.active {
+  content: url(star-active.png);
+}
+
+@media (min-width: 600px) {
+  .stars {
+    display: flex;
+  }
+}
 .btn {
   font-size: 0.8rem;
   margin: 0.2em;
@@ -714,5 +727,3 @@ footer a:hover {
   border: 2px solid rgba(0, 0, 0, 0.2);
   border-radius: 5px;
 }
-
-/*# sourceMappingURL=main.css.map */
