--- a/src/sections/filters.scss
+++ b/src/sections/filters.scss
@@ -109,12 +109,12 @@
     list-style-type: none;
     width: 23px;
     height: 26px;
-    content: url(star-inactive.png);
+    content: url(/static/star-inactive.png);
     background-size: contain;
     background-repeat: no-repeat;
   }
   .rating-star.active {
-    content: url(star-active.png); 
+    content: url(/static/star-active.png); 
   }
   
   @media (min-width: 600px) {
