--- a/src/sections/challenges.scss
+++ b/src/sections/challenges.scss
@@ -11,6 +11,7 @@
 .challenge-list {
     display: flex;
     overflow-x: scroll;
+    padding: 1em;
 }
 
 @media (min-width: $bp-large) {
@@ -18,7 +19,7 @@
         display: grid;
         grid-template-columns: repeat(auto-fit, 400px);
         justify-content: center;
-        padding: 1em;
+        padding: 2em;
         gap: 2em;
 
         .challenge-item {
@@ -35,7 +36,12 @@
     border-radius: 4px;
     margin: 1em;
     box-shadow: 0 0 1em rgba(0, 0, 0, 0.2);
+    transition: box-shadow .3s;
     overflow: hidden;
+
+    &:hover {
+        box-shadow: 0 0 2em rgba(0, 0, 0, 0.5);
+    }
 
     .challenge-title,
     .challenge-description,
