OpenGraph for start page

--- a/static/main.css
+++ b/static/main.css
@@ -320,6 +320,7 @@ header h1 {
 .challenge-list {
   display: flex;
   overflow-x: scroll;
+  padding: 1.5em 0;
 }
 
 @media (min-width: 1000px) {
@@ -327,7 +328,7 @@ header h1 {
     display: grid;
     grid-template-columns: repeat(auto-fit, 400px);
     justify-content: center;
-    padding: 1em;
+    padding: 2.5em 1em;
     gap: 2em;
   }
   .grid .challenge-item {
@@ -342,7 +343,11 @@ header h1 {
   border-radius: 4px;
   margin: 1em;
   box-shadow: 0 0 1em rgba(0, 0, 0, 0.2);
+  transition: box-shadow 0.3s;
   overflow: hidden;
+}
+.challenge-item:hover {
+  box-shadow: 0 0 2em rgba(0, 0, 0, 0.6);
 }
 .challenge-item .challenge-title,
 .challenge-item .challenge-description,
