--- a/static/main.css
+++ b/static/main.css
@@ -345,6 +345,7 @@ header h1 {
   box-shadow: 0 0 1em rgba(0, 0, 0, 0.2);
   transition: box-shadow 0.3s;
   overflow: hidden;
+  animation: card-reveal 0.3s;
 }
 .challenge-item:hover {
   box-shadow: 0 0 2em rgba(0, 0, 0, 0.6);
@@ -386,6 +387,14 @@ header h1 {
   padding: 1em;
 }
 
+@keyframes card-reveal {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 .challenges-cta {
   display: flex;
   flex-direction: column-reverse;
@@ -639,7 +648,7 @@ footer a:hover {
   cursor: pointer;
 }
 
-.filter-by-type, .filter-by-rating, .filter-by-tags, .filter-by-search {
+.filter-by-type, .filter-by-rating, .filter-by-tags, .filter-by-search, .sort-by {
   margin-top: 2em;
 }
 
@@ -722,6 +731,11 @@ footer a:hover {
   cursor: pointer;
 }
 
+.sort-by {
+  grid-column: 2/3;
+  margin-bottom: 2em;
+}
+
 .filter-by-search {
   grid-column: 2/3;
 }
@@ -732,3 +746,61 @@ footer a:hover {
   border: 2px solid rgba(0, 0, 0, 0.2);
   border-radius: 5px;
 }
+
+.lds-ring {
+  display: inline-block;
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  top: calc(50% - 40px);
+  left: calc(50% - 40px);
+}
+
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border: 8px solid #fff;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #fff transparent transparent transparent;
+}
+
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.loading {
+  background-color: rgba(0, 0, 0, 0.2);
+  max-height: 300px;
+}
+.loading .challenge-title,
+.loading .challenge-image,
+.loading .challenge-image-icon,
+.loading .challenge-description,
+.loading .rating,
+.loading .challenge-meta,
+.loading .button {
+  visibility: hidden;
+}
+
+/*# sourceMappingURL=main.css.map */
