Add card reveal animation

--- a/src/sections/challenges.scss
+++ b/src/sections/challenges.scss
@@ -38,6 +38,7 @@
     box-shadow: 0 0 1em rgba(0, 0, 0, 0.2);
     transition: box-shadow .3s;
     overflow: hidden;
+    animation: card-reveal .3s;
 
     &:hover {
         box-shadow: 0 0 2em rgba(0, 0, 0, 0.6);
@@ -84,6 +85,15 @@
         grid-column: 2 / 3;
         font-size: 0.7em;
         padding: 1em;
+    }
+}
+
+@keyframes card-reveal {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
     }
 }
 
