--- a/src/sections/filters.scss
+++ b/src/sections/filters.scss
@@ -1,4 +1,4 @@
-@import "variables.scss";
+@import "../variables.scss";
 
 .our-challenges {
     margin: 2em;
@@ -152,8 +152,7 @@
 }
 
 .sort-by {
-    grid-column: 2 / 3;
-    margin-bottom: 2em;
+    margin-top: 2em;
 }
 
 .filter-by-search {
@@ -170,6 +169,20 @@
 }
 
 .share-filtered-link {
-    color: $blue;
+    display: block;
+    grid-column: span 3/ span 3;
+    text-align: center;
+    font-size: medium;
+    font-weight: 600;
+    text-decoration: underline;
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    margin: 2em 0;
+    cursor: pointer;
+}
+
+.share-filtered-link:hover {
+    opacity: 0.7;
 }
 
