--- a/static/main.css
+++ b/static/main.css
@@ -328,11 +328,17 @@ header h1 {
     display: grid;
     grid-template-columns: repeat(auto-fit, 400px);
     justify-content: center;
-    padding: 2.5em 1em;
+    padding: 2.5em 2em;
     gap: 2em;
   }
   .grid .challenge-item {
     margin: 0;
+  }
+}
+@media (min-width: 2000px) {
+  .grid {
+    overflow: visible;
+    grid-template-columns: repeat(4, 400px);
   }
 }
 .challenge-item {
@@ -732,8 +738,7 @@ footer a:hover {
 }
 
 .sort-by {
-  grid-column: 2/3;
-  margin-bottom: 2em;
+  margin-top: 2em;
 }
 
 .filter-by-search {
@@ -745,6 +750,24 @@ footer a:hover {
   outline: none;
   border: 2px solid rgba(0, 0, 0, 0.2);
   border-radius: 5px;
+}
+
+.share-filtered-link {
+  display: block;
+  grid-column: span 3/span 3;
+  text-align: center;
+  font-size: medium;
+  font-weight: 600;
+  text-decoration: underline;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  margin: 2em 0;
+  cursor: pointer;
+}
+
+.share-filtered-link:hover {
+  opacity: 0.7;
 }
 
 .lds-ring {
