Added extra padding

--- a/src/sections/challenges.scss
+++ b/src/sections/challenges.scss
@@ -11,7 +11,7 @@
 .challenge-list {
     display: flex;
     overflow-x: scroll;
-    padding: 1.5em 0;
+    padding: 1.5em 1.5em;
 }
 
 @media (min-width: $bp-large) {
