--- a/static/main.css
+++ b/static/main.css
@@ -757,11 +757,16 @@ footer a:hover {
 }
 
 .btn.active {
-  background-color: #021928;
+  background-color: rgb(141, 141, 141);
   color: white;
   outline: none;
 }
 
+@media (max-width: 600px) {
+  .btn.active {
+    background-color: #021928;
+  }
+}
 .btn:hover {
   border-radius: 5px;
   cursor: pointer;
