--- a/static/main.css
+++ b/static/main.css
@@ -732,8 +732,7 @@ footer a:hover {
 }
 
 .sort-by {
-  grid-column: 2/3;
-  margin-bottom: 2em;
+  margin-top: 2em;
 }
 
 .filter-by-search {
@@ -745,6 +744,24 @@ footer a:hover {
   outline: none;
   border: 2px solid rgba(0, 0, 0, 0.2);
   border-radius: 5px;
+}
+
+.share-filtered-link {
+  display: block;
+  grid-column: span 3/span 3;
+  text-align: center;
+  font-size: medium;
+  font-weight: 600;
+  text-decoration: underline;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  margin: 2em 0;
+  cursor: pointer;
+}
+
+.share-filtered-link:hover {
+  opacity: 0.7;
 }
 
 .lds-ring {
@@ -802,5 +819,3 @@ footer a:hover {
 .loading .button {
   visibility: hidden;
 }
-
-/*# sourceMappingURL=main.css.map */
